--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,7 +1,7 @@
 /* 
 Template Name: Mediumish 
-Copyright: Sal, WowThemes.net, https://www.wowthemes.net 
-License: https://www.wowthemes.net/freebies-license/ 
+Copyright: Sal, ambivert.tech, https://www.ambivert.tech 
+License: https://www.ambivert.tech/freebies-license/ 
 */
 @media screen and (min-width:1500px) {
     html { font-size:18px; } /* Increase the font size on higher resolutions */
