--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,14 @@ ga('send', 'pageview');
                 <a target="_blank" class="nav-link" href="#"> Docs</a>
                 </li>
 
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://www.facebook.com/WDevops"><i class="fab fa-facebook"></i> </a>
+                </li>
+
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://www.instagram.com/WDevops"><i class="fab fa-instagram"></i> </a>
+                </li>
+    
                 {% include search-lunr.html %}
 
             </ul>
