--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,5 +1,5 @@
 /*!
- * Mundana Jekyll Theme (https://www.wowthemes.net/mundana-jekyll-theme/)
+ * Ambivert Technologies Private Limited   (https://www.wdevops.com/Ambivert Technologies Private Limited-jekyll-theme/)
  */
 
 body {
