--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
 
             </div>
             <div>
-                Made with <a target="_blank" class="text-dark font-weight-bold" href="https://www.ambivert.tech/"> Ambivert Technologies Private Limited   </a> by <a class="text-dark" target="_blank" href="https://www.sangram.pro">Sangram</a>.
+                Made with <a target="_blank" class="text-dark font-weight-bold" href="https://www.ambivert.tech/"> Love </a> by <a class="text-dark" target="_blank" href="https://www.sangram.pro">Sangram</a>.
             </div>
         </div>
         </div>
