--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <h5 class="mb-3">Ambivert Technologies Private Limited  </h5>
 
-<p>Hi! The website you are previewing is a demonstration for Ambivert Technologies Private Limited  , hosted on Github, made by <a href="https://www.wdevops.com/donate/">Sal</a>.</p>
+<p>Hi! The website you are previewing is work of Sangram Chavan.</p>
 
 <a target="_blank" href="https://www.wdevops.com/Ambivert Technologies Private Limited-jekyll-theme/" class="btn btn-warning d-block mb-2"><i class="fa fa-file"></i> Documentation</a>
 
-<a target="_blank" class="btn btn-danger d-block" href="https://www.wdevops.com/donate/"><i class="fa fa-coffee"></i> Buy me a coffee</a> 
+<a target="_blank" class="btn btn-danger d-block" href="https://www.paypal.me/Ambiverttech/"><i class="fa fa-coffee"></i> Buy me a coffee</a> 
