--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,11 +10,5 @@
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wdevops.com/themes/Ambivert Technologies Private Limited-wordpress/">WP</a>
-</li>
-<li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wdevops.com/themes/Ambivert Technologies Private Limited-ghost/">Ghost</a>
-</li>
-<li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wdevops.com/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
+<a target="_blank" class="nav-link" href="https://www.paypal.me/Ambiverttech/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
 </li>
