--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         <div class="row align-items-center justify-content-between">
             <div>
                 <span class="navbar-brand mr-2 mb-0"><strong>WDevops</strong></span>
-                <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
+                <span>Copyright © 2017.</span>
 
                 <!--  Github Repo Star Btn-->
                 <a class="text-dark ml-1" target="_blank" href="https://twitter.com/WDevops"><i class="fab fa-twitter"></i> Follow on Twitter</a>
