--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -17,7 +17,7 @@ $grey-color:       #828282;
     }
 }
 
-amp-img {
+img {
   background-color: grey;
 }
 
@@ -311,7 +311,7 @@ body {
       color: #333333;
       text-decoration: underline;
     }
-    amp-img, amp-youtube {
+    img, amp-youtube {
       margin-top: 30px;
     }
     figure {
