--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,7 @@
   <script type="application/ld+json">
   {% include metadata.json %}
   </script>
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -39,13 +40,6 @@
   {% endcapture %}
   {{ include_to_scssify | scssify }}
   </style>
-<style>
-  .lunrsearchresult .title {color: #d9230f;}
-  .lunrsearchresult .url {color: silver;}
-  .lunrsearchresult a {display: block; color: #777;}
-  .lunrsearchresult a:hover, .lunrsearchresult a:focus {text-decoration: none;}
-  .lunrsearchresult a:hover .title {text-decoration: underline;}
-</style>
 
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
